Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-07-27 Kimmo
 PATCH: [ 1528841 ] Cleanup ByteComparator
  Src: ByteComparator.cpp ByteComparator.h FileTextStats.h
 PATCH: [ 1528987 ] Use 64-bit variable as file position in Bytecompare
  Src: ByteComparator.cpp ByteComparator.h DiffWrapper.cpp FileTextStats.h

2006-07-26 Kimmo
 PATCH: [ 1528444 ] Cleanup for AppSerialize
  Src: AppSerialize.cpp AppSerialize.h 

2006-07-25 Kimmo
 PATCH: [ 1527771 ] Remove Apply syntax highlight to other side option
  Src: Merge.rc MergeDoc.cpp OptionsDef.h OptionsInit.cpp PropEditor.cpp
   PropEditor.h resource.h
  Src/Languages/*: Merge*.rc

2006-07-24 Tim
 PATCH: [ 1527947 ] Various Updates in German Translation for WinMerge 2.5
  Src/Languages/German: MergeGerman.rc

2006-07-24 Kimmo
 PATCH: [ 1526918 ] Detect which side file is binary file
  Src: DiffItem.h DiffWrapper.cpp DiffWrapper.h
  Src/diffutils/src: DIFF.H IO.c analyze.c

2006-07-20 WinMerge experimental release 2.5.5.4 (cvs)

2006-07-20 Kimmo
 PATCH: [ 1525013 ] Add description for ASP.NET filter
  Filters: ASPNET.flt
 PATCH: [ 1525417 ] Move MovedBlock code to own file
  Src: DiffWrapper.cpp Merge.dsp
  Src new file: MovedBlocks.cpp
 PATCH: [ 1525531 ] Allow comparing project files from Open-dialog
  Src: OpenDlg.cpp
 Config log files are .txt files (not .log)
  Src: MainFrm.cpp
 BUG: [ 1495212 ] Wrong cursor position after selecting wordwrapped line
  Fix from Takashi
  Src/editlib: ccrystaltextview.cpp

2006-07-19 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-07-19 Kimmo
 BUG: [ 1198248 ] version copyright symbol needs review
  Src/Languages/*: MergeChineseSimplified.rc MergeChineseTraditional.rc MergeJapanese.rc
   MergeKorean.rc

2006-07-19 Takashi
 BUG: [ 1525451 ] ASSERT in CCrystalTextView::DrawSingleLine()
  Src/editlib: ccrystaltextview.cpp
 BUG: [ 1525466 ] ASSERT in CCrystalTextView::AssertValidTextPos()