@@ -729,6 +729,8 @@
 #define IDS_UNK_ERROR_READING_PROJECT   18510
 #define IDS_UNK_ERROR_SAVING_PROJECT    18511
 #define IDS_PROJFILEDLG_CAPTION         18512
+#define IDS_PROJFILE_LOAD_SUCCESS       18513
+#define IDS_PROJFILE_SAVE_SUCCESS       18514
 #define IDS_TEXT_REPORT_FILES           18540
 #define IDS_HTML_REPORT_FILES           18541
 #define IDS_XML_REPORT_FILES            18542
