@@ -7,6 +7,9 @@ Add new items to top.
   Src: ByteComparator.cpp ByteComparator.h FileTextStats.h
  PATCH: [ 1528987 ] Use 64-bit variable as file position in Bytecompare
   Src: ByteComparator.cpp ByteComparator.h DiffWrapper.cpp FileTextStats.h
+ PATCH: [ 1529053 ] Success message for loading/saving project file
+  Src: Merge.rc ProjectFilePathsDlg.cpp resource.h
+  Src/Languages/*: Merge*.rc
 
 2006-07-26 Kimmo
  PATCH: [ 1528444 ] Cleanup for AppSerialize
